--- a/src/components/sections/Environment/Environment.scss
+++ b/src/components/sections/Environment/Environment.scss
@@ -50,16 +50,56 @@
 
    .env__main_contents_container {
       .title-wrapper {
-         max-width: 600px;
-         .para {
-            max-width: 500px;
-         }
-         @media screen and (max-width: 768px) {
-            .para {
-               margin-inline: auto;
-               margin-bottom: 3.5rem !important;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            max-width: 1008px;
+            margin-inline: auto;
+
+            @media all and (min-width: 768px) {
+               align-items: flex-start;
             }
-         }
+
+            p {
+               margin-bottom: 0px;
+            }
+
+            p:nth-child(1) {
+               font-size: 12px;
+               margin-bottom: 12px;
+
+               @media all and (min-width: 992px) {
+                  font-size: 16px;
+               }
+            }
+      
+            p:nth-child(2) {
+               font-size: 20px;
+               margin-bottom: 12px;
+
+               @media all and (min-width: 400px) {
+                  font-size: 24px;
+               }
+      
+               @media all and (min-width: 992px) {
+                  font-size: 32px;
+               }
+            }
+      
+            p:nth-child(3) {
+               font-size: 12px;
+               margin-bottom: 50px;
+               max-width: 430px;
+      
+               @media all and (min-width: 400px) {
+                  font-size: 14px;
+               }
+      
+               @media all and (min-width: 992px) {
+                  font-size: 16px;
+               }
+            }
       }
 
       .content_container_left {
@@ -148,8 +188,8 @@
                180deg,
                #01121c 0%,
                rgba(1, 18, 28, 0) 15.55%,
-               rgba(1, 18, 28, 0) 70.44%,
-               #01121c 88.29%
+               rgba(1, 18, 28, 0) 90.44%,
+               #01121c 99.29%
             );
             width: 100%;
             height: 100%;
@@ -163,23 +203,12 @@
    }
 }
 .env_card {
-   // width: 384px;
-   // min-height: 352px;
    border-radius: 16px;
-   // border: 1px solid #16384D;
-   // backdrop-filter: blur(2px);
-   // display: flex;
-   // flex-direction: column;
-   // align-items: center;
-   // gap:32px;
    position: relative;
    overflow: hidden;
    z-index: 1;
    margin: 16px 0;
    transition: 0.2s;
-   //background-color: #28443B;
-   // background:  radial-gradient(185.16% 185.16% at 50% 0%, rgba(0, 31, 41, 0.75) 0%, #022032 100%);
-   // box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.18), 0px 13px 29px 0px rgba(0, 0, 0, 0.18), 0px 53px 53px 0px rgba(0, 0, 0, 0.15), 0px 119px 71px 0px rgba(0, 0, 0, 0.09), 0px 212px 85px 0px rgba(0, 0, 0, 0.03), 0px 331px 93px 0px rgba(0, 0, 0, 0.00);
    backdrop-filter: blur(10px);
    .env_card_noise {
       position: absolute;
@@ -217,6 +246,8 @@
       ) !important;
 
       .img_container {
+         display: flex;
+         align-items: center;
          img {
             width: 56px;
          }
@@ -226,23 +257,26 @@
          flex-direction: column;
          gap: 12px;
 
-         .env_card_heading {
-            color: #f2f2f2;
-            text-align: center;
-            font-family: Manrope;
-            font-size: 24px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: 150%; /* 36px */
+         p {
+            margin-bottom: 0px;
          }
-         .env_card_desc {
-            color: #c8c8c8;
-            text-align: center;
-            font-family: Roboto;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 150%; /* 24px */
+
+         p:nth-child(1) {
+            font-size: 18px;
+            margin-bottom: 12px;
+
+            @media all and (min-width: 400px) {
+               font-size: 22px;
+            }
+         }
+   
+         p:nth-child(2) {
+            font-size: 12px;
+            max-width: 430px;
+   
+            @media all and (min-width: 400px) {
+               font-size: 14px;
+            }
          }
       }
    }
@@ -251,8 +285,9 @@
 @media (max-width: 992px) {
    // .env_card{min-height: 250px;}
    .env_card .env_card_contents_container {
-      padding: 18px;
+      padding: 24px;
       min-height: 250px;
+      // min-height: 250px;
    }
    .env_card
       .env_card_contents_container
@@ -271,7 +306,7 @@
    }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
    .env__main_container .env__main_contents_container .content_container_right {
       overflow: inherit;
       max-width: 100%;
@@ -328,8 +363,26 @@
       gap: 10px;
       padding: 20px;
       justify-content: center;
+
+      @media all and (min-width: 400px) {
+         padding: 32px;
+      }
    }
    .env_card .env_card_noise {
       opacity: 0.3 !important;
    }
+}
+
+.slick-track {
+   @media all and (max-width: 767px) {
+      height: 300px !important;
+   }
+
+   @media all and (max-width: 400px) {
+      height: 250px !important;
+   }
+}
+
+.slick-slide div {
+   height: 100%;
 }
