--- a/src/components/pages/Forms/Success.scss
+++ b/src/components/pages/Forms/Success.scss
@@ -8,121 +8,117 @@
 }
 
 .success_container {
-   position: fixed;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
+   outline: solid red 1px;
    z-index: 2001;
-   width: 856px;
-   max-height: 100%;
    overflow-y: auto;
-   overflow-x: hidden;
-   @media (max-width: 768px) {
-      display: flex;
-      flex-direction: column;
-      width: 360px;
+   padding: 20px;
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   background: linear-gradient(0deg,
+         rgba(20, 35, 45, 0.95) 0%,
+         rgba(20, 35, 45, 0.95) 100%),
+      radial-gradient(185.16% 185.16% at 50% 0%,
+         rgba(0, 31, 41, 0.38) 0%,
+         rgba(2, 32, 50, 0.5) 100%);
+   backdrop-filter: blur(10px);
+   padding: 24px;
+   border-radius: 16px;
+
+   @media all and (min-width: 992px) {
+      width: 850px;
+      height: 567px;
    }
-   .content_conatiner {
+
+   .barasingha_head {
+      border-radius: var(--layout-marking-none, 0px);
+      justify-content: center;
       display: flex;
-      width: 750px;
-      padding: 30px;
-      flex-direction: column;
+      position: relative;
+      margin-bottom: 20px;
+      img {
+         &.tick {
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 2rem;
+            aspect-ratio: 1 / 1;
+         }
+      }
+
+      width: 100%;
+   }
+
+   .received_msg {
+      max-width: 400px;
+      color: #FDFDFF;
+      text-align: center;
+      font-family: Manrope;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 120%;
+      padding-top: 24px;
+
+      @media all and (min-width: 992px) {
+         max-width: 300px
+      }
+   }
+
+   .successfully_msg {
+      max-width: 606px;
+      margin-block: 24px;
+      color: #A0A6AA;
+      text-align: center;
+      font-family: Manrope;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+
+      @media all and (min-width: 400px) {
+         font-size: 14px;
+      }
+   }
+
+   .close_button {
+      display: flex;
+      width: 130px;
+      padding: 8px 16px;
       justify-content: center;
       align-items: center;
-      border-radius: 16px;
-      background: linear-gradient(
-            0deg,
-            rgba(20, 35, 45, 0.95) 0%,
-            rgba(20, 35, 45, 0.95) 100%
-         ),
-         radial-gradient(
-            185.16% 185.16% at 50% 0%,
-            rgba(0, 31, 41, 0.38) 0%,
-            rgba(2, 32, 50, 0.5) 100%
-         );
-      backdrop-filter: blur(10px);
-      @media (max-width: 768px) {
-         width: 300px;
-         padding: 32px;
-         border-radius: 16px;
-      }
-      .barasingha_head {
-         border-radius: var(--layout-marking-none, 0px);
-         justify-content: center;
-         display: flex;
-         margin-bottom: 2rem;
-         position: relative;
+      gap: var(--layout-marking-none, 0px);
+      border-radius: 4px;
+      background: var(--Linear, #e5be20);
+      color: #0e2139;
+      font-family: Manrope;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 800;
+      line-height: 20px;
+      letter-spacing: 0.24px;
+      text-transform: uppercase;
+      border: none;
+   }
 
-         img {
-            &.tick {
-               position: absolute;
-               top: 100%;
-               left: 50%;
-               transform: translate(-50%, -50%);
-               width: 2rem;
-               aspect-ratio: 1 / 1;
-            }
-         }
-         @media (max-width: 768px) {
-            width: 100%;
-            height: 160px;
-         }
-      }
-      .received_msg {
-        max-width: 400px;
-        color: #FDFDFF;
-        text-align: center;
-        font-family: Manrope;
-        font-size: 32px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 120%; /* 38.4px */
-        padding-top:32px;
-      }
-      .successfully_msg {
-        max-width: 606px;
-        margin-block: 1rem;
-        color: #A0A6AA;
-        text-align: center;
-        font-family: Manrope;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 150%; /* 21px */
-        padding-bottom: 32px;
-      }
-      .close_button {
-         display: flex;
-         width: 130px;
-         padding: 8px 16px;
-         justify-content: center;
-         align-items: center;
-         gap: var(--layout-marking-none, 0px);
-         border-radius: 4px;
-         background: var(--Linear, #e5be20);
-         color: #0e2139;
-         font-family: Manrope;
+   .concerns {
+      color: #81909b;
+      text-align: center;
+      font-family: Manrope;
+      font-size: 10px;
+      font-style: normal;
+      font-weight: 300;
+      line-height: 150%;
+      padding-top: 24px;
+      @media all and (min-width: 400px) {
          font-size: 12px;
-         font-style: normal;
-         font-weight: 800;
-         line-height: 20px; /* 166.667% */
-         letter-spacing: 0.24px;
-         text-transform: uppercase;
-         border: none;
       }
-      .concerns {
-         width: 500px;
-         color: #81909b;
-         text-align: center;
-         font-family: Manrope;
-         font-size: 10px;
-         font-style: normal;
-         font-weight: 300;
-         line-height: 150%; /* 15px */
-         padding-top: 24px;
-         @media (max-width: 768px) {
-            width: 300px;
-         }
+
+      @media all and (min-width: 400px) {
+         max-width: 600px;
       }
    }
 }
