--- a/src/components/pages/Errors/Page404/Page404.scss
+++ b/src/components/pages/Errors/Page404/Page404.scss
@@ -1,116 +1,112 @@
 .page404_wrapper {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: linear-gradient(180deg, rgba(1, 18, 29, 0.70) 0%, rgba(0, 0, 0, 0.29) 100%);
-    backdrop-filter: blur(7px);
-    z-index: 1030;
- }
- 
- .page404_container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2001;
-    width: 856px;
-    max-height: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
-    @media (max-width: 768px) {
-       display: flex;
-       flex-direction: column;
-       width: 364px;
-    }
-    .content_conatiner {
-       display: flex;
-       width: 750px;
-       padding: 48px;
-       flex-direction: column;
-       justify-content: center;
-       align-items: center;
-       border-radius: 16px;
-       background: linear-gradient(
-             0deg,
-             rgba(20, 35, 45, 0.95) 0%,
-             rgba(20, 35, 45, 0.95) 100%
-          ),
-          radial-gradient(
-             185.16% 185.16% at 50% 0%,
-             rgba(0, 31, 41, 0.38) 0%,
-             rgba(2, 32, 50, 0.5) 100%
-          );
-       backdrop-filter: blur(17px);
-       @media (max-width: 768px) {
-          width: 300px;
-          padding: 32px;
-          border-radius: 16px;
-       }
-       .page404_image {
-          border-radius: var(--layout-marking-none, 0px);
-          justify-content: center;
-          display: flex;
-          margin-bottom: 2rem;
-          position: relative;
- 
-          img {
-             &.image {
-                position: absolute;
-                top: 100%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                width: 2rem;
-                aspect-ratio: 1 / 1;
-             }
-          }
-          @media (max-width: 768px) {
-             width: 100%;
-             height: 160px;
-          }
-       }
-       .message {
-         max-width: 471px;
-         color: #FDFDFF;
-         text-align: center;
-         font-family: Manrope;
-         font-size: 32px;
-         font-style: normal;
-         font-weight: 700;
-         line-height: 120%; /* 38.4px */
-         padding-top:32px;
-       }
-       .message_desc {
-         max-width: 606px;
-         margin-block: 1rem;
-         color: #A0A6AA;
-         text-align: center;
-         font-family: Manrope;
+   position: fixed;
+   left: 0px;
+   top: 0px;
+   z-index: 1024;
+   width: 100%;
+   height: 100%;
+   background: linear-gradient(180deg,
+         rgba(0, 0, 29, 0.5) 0%,
+         rgba(0, 0, 0, 0.6) 100%);
+   backdrop-filter: blur(5px);
+   padding: 20px;
+   overflow: auto;
+
+   @media all and (min-width: 992px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
+}
+
+.page404_container {
+   z-index: 2001;
+   overflow-y: auto;
+   padding: 20px;
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   background: linear-gradient(0deg,
+         rgba(20, 35, 45, 0.95) 0%,
+         rgba(20, 35, 45, 0.95) 100%),
+      radial-gradient(185.16% 185.16% at 50% 0%,
+         rgba(0, 31, 41, 0.38) 0%,
+         rgba(2, 32, 50, 0.5) 100%);
+   backdrop-filter: blur(10px);
+   padding: 24px;
+   border-radius: 16px;
+
+   @media all and (min-width: 992px) {
+      width: 850px;
+      height: 567px;
+   }
+
+   .page404_image {
+      border-radius: var(--layout-marking-none, 0px);
+      justify-content: center;
+      display: flex;
+      position: relative;
+      margin-bottom: 20px;
+      width: 50%;
+      img {
+         &.image {
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 2rem;
+            aspect-ratio: 1 / 1;
+         }
+      }
+   }
+
+   .message {
+      max-width: 471px;
+      color: #FDFDFF;
+      text-align: center;
+      font-family: Manrope;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 120%;
+      padding-top: 32px;
+   }
+
+   .message_desc {
+      max-width: 606px;
+      margin-block: 24px;
+      color: #A0A6AA;
+      text-align: center;
+      font-family: Manrope;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+
+      @media all and (min-width: 400px) {
          font-size: 14px;
-         font-style: normal;
-         font-weight: 400;
-         line-height: 150%; /* 21px */
-         padding-bottom: 32px;
-       }
-       .close_button {
-          display: flex;
-          width: 130px;
-          padding: 8px 16px;
-          justify-content: center;
-          align-items: center;
-          gap: var(--layout-marking-none, 0px);
-          border-radius: 4px;
-          background: var(--Linear, #e5be20);
-          color: #0e2139;
-          font-family: Manrope;
-          font-size: 12px;
-          font-style: normal;
-          font-weight: 800;
-          line-height: 20px; /* 166.667% */
-          letter-spacing: 0.24px;
-          text-transform: uppercase;
-          border: none;
-       }
-    }
- }
+      }
+   }
+
+   .close_button {
+      display: flex;
+      width: 130px;
+      padding: 8px 16px;
+      justify-content: center;
+      align-items: center;
+      gap: var(--layout-marking-none, 0px);
+      border-radius: 4px;
+      background: var(--Linear, #e5be20);
+      color: #0e2139;
+      font-family: Manrope;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 800;
+      line-height: 20px;
+      letter-spacing: 0.24px;
+      text-transform: uppercase;
+      border: none;
+   }
+}
