--- a/src/components/pages/Errors/Page404/Page404.scss
+++ b/src/components/pages/Errors/Page404/Page404.scss
@@ -99,14 +99,15 @@
       gap: var(--layout-marking-none, 0px);
       border-radius: 4px;
       background: var(--Linear, #e5be20);
-      color: #0e2139;
-      font-family: Manrope;
-      font-size: 12px;
-      font-style: normal;
-      font-weight: 800;
-      line-height: 20px;
-      letter-spacing: 0.24px;
-      text-transform: uppercase;
       border: none;
+      
+      a {
+         color: #0e2139 !important;
+         font-size: 12px;
+         font-weight: 800;
+         line-height: 20px;
+         letter-spacing: 0.24px;
+         text-transform: uppercase;
+      }
    }
 }
