--- a/src/components/pages/CareerDetailsPage/CareerDetailsPage.scss
+++ b/src/components/pages/CareerDetailsPage/CareerDetailsPage.scss
@@ -145,6 +145,11 @@
             display: none;
          }
 
+         .tab-item {
+            display: flex;
+            gap: 0.5rem;
+         }
+
          button {
             all: initial;
             font-family: inherit;
