--- a/src/components/pages/Products/Features/Features.scss
+++ b/src/components/pages/Products/Features/Features.scss
@@ -107,6 +107,11 @@
             display: none;
          }
 
+         .tab-entry {
+            display: flex;
+            gap: 0.5rem;
+         }
+
          button {
             all: initial;
             font-family: inherit;
