--- a/src/components/pages/Forms/ContactUs.scss
+++ b/src/components/pages/Forms/ContactUs.scss
@@ -24,7 +24,7 @@
 .contact_us_container {
    box-sizing: border-box;
    display: flex;
-   width: 980px;
+   max-width: 992px;
    height: 567px;
    border-radius: 8px;
    overflow: hidden;
@@ -35,7 +35,13 @@
       height: auto;
       width: 100%;
    }
+
+   @media (min-width: 992px) {
+      width: 992px;
+   }
+
    .info {
+      flex: 1;
       padding: 56px;
       background: linear-gradient(
               0deg,
@@ -103,6 +109,7 @@
       .form-field {
          margin-bottom: 40px;
          width: 100%;
+         position: relative;
          .form-field-title {
             margin-bottom: 10px;
             font-size: 16px;
@@ -122,7 +129,7 @@
             color: #FFF;
             font-size: 12px;
             &:focus {
-               outline: 1px solid #E5BE20;
+               outline: none;
             }
          }
          .form-field-textarea {
@@ -137,19 +144,31 @@
             padding: 16px;
             font-size: 12px;
             &:focus {
-               outline: 1px solid #E5BE20;
+               outline: none;
             }
          }
-         .form-field-input-subtext {
+
+         .form-field-subtext {
+            position: absolute;
             color: #45535E;
             font-size: 12px;
             font-weight: 500;
+            margin-block: 5px 0px;
+         }
+
+         .error-subtext {
+            color: #EF6464;
+         }
+
+         .error-outline {
+            outline: #EF6464 solid 1px !important; // added important to override outline: none when corrections to an invalid input
          }
       }
       .form-field-submit {
          button {
             width: 130px;
             padding: 8px 16px;
+            margin-top: 25px;
             color: rgba(14, 33, 57, 1);
             font-weight: 800;
             border: none;
@@ -158,7 +177,14 @@
             font-size: 12px;
             letter-spacing: 0.24px;
             @media (max-width: 768px) {
+               padding: 14px 16px;
                width: 100%;
+            }
+
+            &:disabled {
+               cursor: not-allowed;
+               background: #183444;
+               color: #A8B6BF;            
             }
          }
       }
